force-app/main/default/objects/Grants_Team_Response_Item__c/Grants_Team_Response_Item__c.object-meta.xml
<CustomObject>
    <label>Grants Team Response Item</label>
    <nameField>
        <displayFormat>GTRI-{00000}</displayFormat>
        <label>Grants Team Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grants Team Response Item</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>