force-app/main/default/objects/Grants_Team_Response_Item__c/fields/Eligibility_Check_List__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Check_List__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Eligibility Check List</label>
    <referenceTo>Eligibility_Check_List__c</referenceTo>
    <relationshipLabel>Grants Team Response Items</relationshipLabel>
    <relationshipName>Grants_Team_Response_Items</relationshipName>
    <type>Lookup</type>
</CustomField>