force-app/main/default/objects/Grants_Team_Response_Item__c/fields/Grants_Team_Response__c.field-meta.xml
<CustomField>
    <fullName>Grants_Team_Response__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grants Team Response</label>
    <referenceTo>Grants_Team_Response__c</referenceTo>
    <relationshipLabel>Grants Team Response Item</relationshipLabel>
    <relationshipName>Grants_Team_Response_Item</relationshipName>
    <type>Lookup</type>
</CustomField>